<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>tello_description</name>
    <version>0.0.0</version>
    <description>tello_ros description files</description>

    <maintainer email="ryan.wueest@protonmail.com">Ryan Wüest</maintainer>
    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>urdf_launch</exec_depend>

    <test_depend>ament_lint_auto</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>

</package>